--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Links</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto+Mono&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css" />  
+    <title>Project_Zola</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto+Mono&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="./styles.css" />    
   
   </head>
 
